# proxy_modelling_offline

src/GS-SDF/: CMakeLists.txt  README.md
src/GS-SDF/config/: base.yaml
src/GS-SDF/config/colmap/: colmap_example.yaml  hku.yaml  shenzhenbei.yaml
src/GS-SDF/config/fast_livo/: campus.yaml  cbd.yaml  culture01.yaml  drive.yaml  fast_livo.yaml  red_bird.yaml  shenzhenbei2.yaml  station.yaml  sysu.yaml
src/GS-SDF/config/oxford_spires/: oxford_spires.yaml
src/GS-SDF/config/replica/: replica.yaml
src/GS-SDF/config/rviz/: vis_thirdperson.rviz
src/GS-SDF/eval/: create_comparison_video.py
src/GS-SDF/eval/image_metrics/: metrics.py  metrics2.py
src/GS-SDF/eval/structure_metrics/: evaluator.py
src/GS-SDF/include/data_loader/: data_loader.cpp  data_loader.h
src/GS-SDF/include/data_loader/data_parsers/: base_parser.cpp  base_parser.h  colmap_parser.hpp  fastlivo_parser.hpp  kitti_parser.hpp  ncd_parser.hpp  neuralrgbd_parser.hpp  oxford_spires_parser.hpp  r3live_parser.hpp  replica_parser.hpp  rosbag_parser.hpp
src/GS-SDF/include/mesher/: mesher.cpp  mesher.h
src/GS-SDF/include/neural_gaussian/: gauss_utils.hpp  neural_gaussian.cpp  neural_gaussian.h
src/GS-SDF/include/neural_mapping/: neural_mapping.cpp  neural_mapping.h
src/GS-SDF/include/neural_net/: encoding_map.cpp  encoding_map.h  local_map.cpp  local_map.h  sub_map.cpp  sub_map.h
src/GS-SDF/include/optimizer/: loss.cpp  loss.h
src/GS-SDF/include/params/: params.cpp  params.h
src/GS-SDF/include/utils/: tqdm.hpp  utils.cpp  utils.h
src/GS-SDF/include/utils/sensor_utils/: cameras.hpp
src/GS-SDF/scripts/: baseline.sh  fast_livo2.sh  replica.sh
src/GS-SDF/scripts/rosbag_convert/: README.md  rosbag_to_colmap.py
src/GS-SDF/src/: neural_mapping_node.cpp
src/GS-SDF/submodules/gsplat_cpp/: .gitmodules  CMakeLists.txt  README.md
src/GS-SDF/submodules/gsplat_cpp/gsplat_cpp/: fully_fused_projection.cpp  fully_fused_projection.h  isect_tiles.hpp  rasterize_to_pixels.cpp  rasterize_to_pixels.h  rendering.cpp  rendering.h  spherical_harmonics.hpp
src/GS-SDF/submodules/gsplat_cpp/submodules/gsplat/examples/: simple_trainer_2dgs.py
src/GS-SDF/submodules/gsplat_cpp/submodules/gsplat/gsplat/: rendering.py
src/GS-SDF/submodules/gsplat_cpp/submodules/gsplat/gsplat/cuda/: _wrapper.py
src/GS-SDF/submodules/gsplat_cpp/submodules/gsplat/gsplat/cuda/csrc/: Projection.cpp  Projection.h  Projection2DGSFused.cu  Projection2DGSPacked.cu  ProjectionEWA3DGSFused.cu  ProjectionEWA3DGSPacked.cu  Rasterization.cpp  Rasterization.h  RasterizeToPixels2DGSBwd.cu  RasterizeToPixels2DGSFwd.cu
src/GS-SDF/submodules/gsplat_cpp/submodules/gsplat/gsplat/cuda/include/: Ops.h
src/GS-SDF/submodules/kaolin_wisp_cpp/: CMakeLists.txt  README.md
src/GS-SDF/submodules/kaolin_wisp_cpp/kaolin_wisp_cpp/octree_as/: octree_as.cpp  octree_as.h
src/GS-SDF/submodules/kaolin_wisp_cpp/kaolin_wisp_cpp/render_ops/: find_depth_bound.cpp  find_depth_bound.h  find_depth_bound_cuda.cu
src/GS-SDF/submodules/kaolin_wisp_cpp/kaolin_wisp_cpp/spc_ops/: spc_ops.cpp  spc_ops.h
src/GS-SDF/submodules/kaolin_wisp_cpp/kaolin_wisp_cpp/wisp_spc_ops/: wisp_spc_ops.cpp  wisp_spc_ops.h
src/GS-SDF/submodules/kaolin_wisp_cpp/submodules/kaolin/kaolin/csrc/ops/spc/: point_utils.cpp  point_utils.h  point_utils_cuda.cu
src/GS-SDF/submodules/kaolin_wisp_cpp/submodules/kaolin/kaolin/csrc/render/spc/: raytrace.h
src/GS-SDF/submodules/kaolin_wisp_cpp/submodules/kaolin/tests/python/kaolin/non_commercial/flexicubes/: test_flexicubes.py
src/GS-SDF/submodules/llog/: CMakeLists.txt
src/GS-SDF/submodules/simple-knn/: README.md  spatial.h
src/GS-SDF/submodules/tcnn_binding/: CMakeLists.txt  README.md
src/GS-SDF/submodules/tcnn_binding/tcnn_binding/: bindings.cpp  bindings.h  tcnn_binding.cpp  tcnn_binding.h
src/proxy_model/: CMakeLists.txt  MASK_ENHANCED_USAGE.md  README.md  package.xml  requirements.txt  setup.py
src/proxy_model/config/: my_data.yaml  my_data_0621.yaml
src/proxy_model/scripts/: build_object_bag.py
src/proxy_model/src/proxy_model/: __init__.py  config.py  geometry.py  pipeline.py  qwen.py  ros_utils.py  segmenter.py
(+5 files in other folders)
