<?xml version="1.0"?>
<package format="2">
  <name>proxy_model</name>
  <version>0.1.0</version>
  <description>Object-centric ROS bag preprocessing for GS-SDF.</description>

  <maintainer email="yc@example.com">yc</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
